<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心邮</string>
    <string name="app_desc">我 心 邮 你</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_screen">ScreenActivity</string>
    <string name="title_activity_picture">图片</string>
    <string name="title_activity_postarticle">发表文章</string>
    <string name="title_activity_voutedetail">投票详情</string>
    <string name="title_activity_voute">投票</string>
    <string name="title_activity_mail">邮箱</string>
    <string name="title_activity_maildetail">邮件</string>
    <string name="title_activity_postmail">撰写邮件</string>
    <string name="title_activity_referdetail">文章</string>
    <string name="title_activity_preference">设置</string>
    <string name="ic_description">ic_launcher</string>
    <string name="home_frament">home_fragment</string>
    <string name="section_frament">section_fragment</string>
    <string name="first">首页</string>
    <string name="last">尾页</string>
    <string name="previous">前页</string>
    <string name="next">后页</string>
    <string name="got">to</string>
    <string name="go">GO</string>
    <string name="page">/</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索讨论区</string>
    <string name="image_load">2G/3G网络下不显示图片</string>
    <string name="info_remind">关闭消息提醒</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="version_info">版本信息</string>
	<string name="aboutus_detail">心邮:我心邮你\nhttps://github.com/xzwszl/ByrForum\n邮箱:xzwszl@163.com\nThanks all of you~</string>
	<string name="loading_in">加载中···</string>
	<string name="loading_hard">努力加载中···</string>
	<string name="loading_failed">加载失败,点击重新加载</string>
	
    <color name="screenColor">#96D1FF</color>
    <color name="home_back">#f0f0f0</color>
    <color name="section_pos1">#EC8C40</color>
    <color name="section_pos3">#13680B</color>
    <color name="section_pos5">#196386</color>
    <color name="section_pos2">#502586</color>
    <color name="section_pos4">#AC256B</color>
    <color name="section_board_back">#E7E7E7</color>
    <color name="board_side">#EAF9FD</color>
    <color name="user_dialog_item">#1582B6</color>
    <color name="popupwindow_background">#b0000000</color>
    <color name="radio_button_selected_color">#ff33b5e5</color>
    <color name="radio_button_unselected_color">@android:color/transparent</color>
    <color name="sc_dialog">#ff111111</color>
    <color name="blue">#77BEFF</color>
    <color name="green">#78BB6C</color>
    <color name="red">#B65E5E</color>
    <color name="pink">#E69891</color>
    <color name="dark_blue">#485086</color>
    <color name="grey">#666</color>
    <color name="light">#e9e9e9</color>
    <color name="yellow">#FDC45F</color>
    <color name="radio_blue">#1882D5</color>
    <color name="light_white">#f9f9f9</color>
    <color name="light_grey">#A1A1A1</color>
    <color name="article_item_null">#ffffffff</color>
	<color name="article_item_light">#9ff0f0f0</color>
	<color name="dark_gray">#333</color>
	<color name="big_red">#F16868</color>
	
	
	<!-- 日渐模式 -->
	<color name="daymainbk">#EFEFEF</color>
	<color name="daymainFontColor">#646464</color>
	<color name="daymainitembk">#FFFFFF</color>
	<color name="daysubitembk">#EFEFEF</color>
	<color name="daysubFontColor">#A1A1A1</color>
	<color name="dayfavoritembk">#FDC45F</color>
	<!-- 夜间模式 -->
	<color name="nightmainbk">#0f0f0f</color>
	<color name="nightmainFontColor">#AAA</color>
	<color name="nightmainitembk">#7A7A7A</color>
	<color name="nightsubitembk">#0f0f0f</color>
	<color name="nightsubFontColor">#999</color>
	<color name="nightfavoritembk">#7A7A7A</color>
	
    <string name="title_activity_board">BoardActivity</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="image_desc"></string>
    <string name="label_update">更新于: </string>
    <string name="label_last_time">1分钟前</string>
    <string name="pull_down_for_refresh">下拉刷新</string>
    <string name="release_for_refresh">松开刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="pull_up_for_more">上拉更多</string>
    <string name="release_for_more">松开加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="click_for_more">点击加载更多</string>
    <string name="title_activity_post_article">PostArticleActivity</string>
    <string name="write_article">写文</string>
    <string name="board_refresh">刷新</string>
    <string name="post_title">标题</string>
    <string name="post_content">内容</string>
    <string name="post_attch">附件</string>
    <string name="post_article">发送</string>
    <string name="article_reply">回复</string>
    <string name="article_update">编辑</string>
    <string name="article_delete">删除</string>
    <string name="article_forward">转寄</string>
    <string name="article_more">更多</string>
    <string name="user_sayhello">发问候信</string>
    <string name="user_addfridend">加为好友</string>
    <string name="sd_dir">SD卡目录</string>
    <string name="face_classics">经典</string>
    <string name="face_monkey">悠嘻猴</string>
    <string name="face_tuzki">兔斯基</string>
    <string name="face_onion">洋葱头</string>
    <string name="account">输入论坛账号</string>
    <string name="password">输入密码</string>
    <string name="login">登     录</string>
    <string name="visitor">游客通道</string>
    <string name="forum">   Byr论坛</string>
    <string name="logout">注销</string>
    <string name="self">个人中心</string>
    <string name="favor">收藏夹</string>
    <string name="inbox">收件箱</string>
    <string name="outbox">发件箱</string>
    <string name="delbox">垃圾箱</string>
    <string name="back"> 返回</string>
    <string name="write_mail">写信 </string>
    <string name="reciver">收件人</string>
    <string name="mail_title">主题</string>
    <string name="mail_content">邮件内容</string>
    <string name="forward_threads">合集转寄</string>
	<string name="forward_noref">合集无引文</string>
    <string name="forward_noattach">不含附件</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="network_error">网络故障，请检查网络连接</string>
    
    
    <dimen name="radio_button_conner_radius">5dp</dimen>
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>

    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_vote">VoteActivity</string>
    
    <string-array name="action_vote">
        <item>最新投票</item>
        <item>最热投票</item>
        <item>全部投票</item>
        <item>我的投票</item>
        <item>我参与的投票</item>
    </string-array>

    
     <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    
</resources>
