<menu xmlns:android="http://schemas.android.com/apk/res/android"   
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/article_reply"
        android:orderInCategory="100"
        android:title="@string/article_reply"
        android:showAsAction="never"/>
    <item
        android:id="@+id/article_update"
        android:orderInCategory="100"
        android:title="@string/article_update"
        android:showAsAction="never"/>
    <item
        android:id="@+id/article_delete"
        android:orderInCategory="100"
        android:title="@string/article_delete"
        android:showAsAction="never"/>
    <item
        android:id="@+id/article_more"
        android:orderInCategory="100"
        android:title="@string/article_more"
        android:showAsAction="never"/>
    
</menu>
