<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?mainBackground"
    android:orientation="vertical">
    
    <ListView
        android:id="@+id/articlelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="#00000000"
        android:layout_weight="1">
    </ListView>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:orientation="horizontal"
        android:background="@drawable/bottom">
        
        <TextView android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textSize="14sp"
            android:textColor="@drawable/page_colcor"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5sp"/>
                
        <TextView android:id="@+id/pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@drawable/page_colcor"
            android:textSize="14sp"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"/>
               
        <TextView android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@drawable/page_colcor"
            android:textSize="14sp"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"/>
        
        <TextView android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
           android:textColor="@drawable/page_colcor"
            android:textSize="14sp"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"/>
        
        <TextView android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="@drawable/page_colcor"
            android:textSize="14sp"
            android:text="@string/page"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        
        <EditText android:id="@+id/got"
            android:layout_width="0sp"
            android:layout_height="16sp"
           	android:hint="@string/got"
           	android:textSize="14sp"
           	android:layout_weight="1"
           	android:layout_gravity="center_vertical"
           	android:background="#fff"/>
        
        <TextView android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/page_colcor"
            android:text="@string/go"
            android:textSize="14sp"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5sp"/>
     </LinearLayout>
</LinearLayout>