<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="?mainBackground">

    <EditText
        android:id="@+id/reciver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/reciver"
		android:layout_marginBottom="5dp"
		android:background="@drawable/edittext_bk_select"
		android:padding="2dp"
		android:textColor="?mainFontColor">
    </EditText>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_title"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_bk_select"
        android:padding="2dp"
        android:textColor="?mainFontColor"/>
  
    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/mail_content"
        android:background="@drawable/edittext_bk_select"
        android:layout_weight="1"
        android:padding="2dp"
        android:gravity="top"
        android:layout_marginBottom="5dp"
        android:textColor="?mainFontColor">
    </EditText>
    
    <TextView android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/green"
        android:textColor="@android:color/white"
        android:padding="2dp"
        android:gravity="center"
        android:textSize="18sp"/>
</LinearLayout>