<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:numColumns="5"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"/>

   	<ImageView android:layout_width="match_parent"
	               android:layout_height="1sp"
	               android:background="@android:color/darker_gray"
	               android:contentDescription="@string/image_desc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/face_classics "
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:text="@string/face_classics"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"/>

         <include layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/face_monkey"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"          
            android:text="@string/face_monkey"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"/>
        <include layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/face_tuzki"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/face_tuzki"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"/>

        <include layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/face_onion"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/face_onion"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>