<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg" 
    xmlns:app="http://schemas.android.com/apk/res/xzw.szl.byr">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical" 
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:layout_centerInParent="true">
        
        <xzw.szl.byr.view.CircleImageView
            android:id="@+id/face"
	        android:layout_width="120dp"
	        android:layout_height="120dp"
	        android:src="@drawable/face_default_m"
	        android:tag="m"
	        app:border_width="1dp"
	        app:border_color="#ffeeeeee"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="18dp"/>
	        
        <EditText android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:textSize="16sp"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#FF666666"
            android:background="#ffffffff"
            android:paddingLeft="12dp"
			android:hint="@string/account"
			android:maxLines="1"
			android:maxLength="16"
			android:inputType="text"/>
		<View android:background="#ffc0c3c4"
		    android:layout_width="match_parent"
		    android:layout_height="1.0px"
		    android:layout_marginLeft="1.0px"
		    android:layout_marginRight="1.0px"/>
		
		<EditText android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:textSize="16sp"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#FF666666"
            android:background="#ffffffff"
            android:paddingLeft="12dp"
			android:hint="@string/password"
			android:maxLines="1"
			android:maxLength="16"
			android:inputType="textPassword"/>
		
		<Button android:id="@+id/login"
		    android:textSize="18sp"
		    android:gravity="center"
		    android:paddingTop="5dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="12dp"
		    android:text="@string/login"
		    android:background="@drawable/chat_send_button_bg"/>
		
		<Button android:id="@+id/visitor"
	       android:textSize="12sp"
	       android:textColor="#FFFFFFFF"
	       android:gravity="left|center"
	       android:background="@drawable/login_visitor_bg"
	       android:paddingLeft="8dp"
	       android:paddingRight="18dp"
	       android:clickable="true"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/visitor"
	       android:layout_marginRight="2dp"
	       android:layout_gravity="right"/>
		
    </LinearLayout>

</RelativeLayout>